# check-sos

./: .flake8  .gitignore  LICENSE  Makefile  README.md  compute.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
few_state/: script.py  system_maker.py
sos/: __init__.py  script.py  system.py
tests/: 2-state.txt  2state.txt  3-state.txt  CT_dipoles.txt  test_components_iter.py  test_few_state.py  test_system.py  tests_component_iter.py  tests_system.py
text/: SOS.tex  biblio.bib
white-papers/: SOS.tex  Scheme1.eps  biblio.bib  few-states.tex
