[project]
name = "check-sos"
dynamic = ["version"]
description = "Check the SOS expressions"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

authors = [
  {name = "Pierre Beaujean", email = "pierre.beaujean@unamur.be" }
]

maintainers = [
  {name = "Pierre Beaujean", email = "pierre.beaujean@unamur.be" }
]

classifiers = [
    # For a list of valid classifiers, see https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "numpy",
    "more-itertools"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-quotes",
    "autopep8",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/pierre-24/check-sos"
"Bug Reports" = "https://github.com/pierre-24/check-sos/issues"
"Source" = "https://github.com/pierre-24/check-sos/"

[tool.setuptools]
packages = ['sos']

[tool.setuptools.dynamic]
version = {attr = "sos.__version__"}


[project.scripts]

# keep that alphabetical ;)
compute-sos = 'sos.script:main'

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]